<resources>
	<string name="app_name">mCubed</string>
	<string name="app_name_version">mCubed 1.05</string>
	<string name="app_version">1.05</string>
	<string name="app_web_service">http://mcubed.ddns.net/mCubedServices/</string>
	<string name="app_widget_1x1">mCubed (1x1)</string>
	<string name="app_widget_4x1">mCubed (4x1)</string>
	<string name="about_developer_label">Developer:</string>
	<string name="about_developer_text">Nick Paddock</string>
	<string name="about_website_label">Website:</string>
	<string name="about_website_text">http://mcubed.ddns.net/</string>
	<string name="about_changelog_label">Change Log:</string>
	<string name="about_changelog_text"><![CDATA[
		1.05\n
		\t- Added scrobble support for Last.fm accounts\n\n
		1.04\n
		\t- Added Bluetooth device specific settings\n
		\t- Fixed SD card permission issue\n
		\t- Improved automatically resume feature\n
		\t- Removed ongoing \"mCubed is Running\" notification\n\n
		1.03.1\n
		\t- Critical fix for force close due to the new notification\n\n
		1.03\n
		\t- Headset/headphone connection fixes\n
		\t- Improved notification (for Android 3.0+)\n
		\t- Updated UI (for Android 3.0+)\n
		\t- Minor UI enhancements\n\n
		1.02\n
		\t- Improved audio focus (e.g. audio ducking for voice navigation apps)\n
		\t- Improved remote control support (e.g. bluetooth enhancements)\n
		\t- Lock-screen support for stock lock-screens (requires Android 4.0+)\n\n
		1.01\n
		\t- Filters out notification tones, alarms, and ringtones from the library\n
		\t- Various performance improvements\n
		\t- Improvements to devices with multiple SD cards\n
		\t- Improved the touch friendliness\n
		\t- Improved backend error logging\n\n
		1.00\n
		\t- Initial Release\n
		\t- 1x1 and 4x1 Widgets\n
		\t- Dynamic \"Now Playing\" Playlist\n
		\t- Extensive Settings\n
		\t- \"Persisted Shuffle\", \"Perpetual Shuffle\", and \"Sequential\" Play Modes
	]]></string>
	<string name="button_action_content">Play/Pause</string>
	<string name="button_close_content">Close</string>
	<string name="button_next_content">Next</string>
	<string name="button_open_content">Open</string>
	<string name="button_prev_content">Previous</string>
	<string name="cover_art_content">Cover Artwork</string>
	<string name="dp_prompt">Select a Unit</string>
	<string name="feedback_main_title">Submit Feedback</string>
	<string name="feedback_email_label">Email:</string>
	<string name="feedback_email_notes">
	    Note: The email field is optional. If you would like a follow-up response to
	    your feedback, then you may specify an email address. If your feedback does
	    not incite a response, then your email address will simply be ignored.</string>
	<string name="feedback_message_label">Message:</string>
	<string name="feedback_submit_button_perform">Submit</string>
	<string name="feedback_submit_button_progressing">Submitting&#8230;</string>
	<string name="feedback_submit_failure">Unable to submit feedback. Make sure you are connected to the Internet.</string>
	<string name="feedback_submit_success">Feedback submitted successfully. Thank you.</string>
	<string name="login_no_action">A login action was not specified.</string>
	<string name="lp_logging_in_text">Logging in&#8230;</string>
	<string name="lp_password_hint">Password</string>
	<string name="lp_username_hint">Username</string>
	<string name="mfdv_artist_label">Artist</string>
	<string name="mfdv_album_label">Album</string>
	<string name="mfdv_genre_label">Genre</string>
	<string name="mfdv_title_label">Title</string>
	<string name="mfdv_track_label">Track #</string>
	<string name="mfdv_year_label">Year</string>
	<string name="mfdv_duration_label">Length</string>
	<string name="mflv_group_label">Group By</string>
	<string name="mflv_group_prompt">Group By</string>
	<string name="mount_display_text">The SD card is currently not accessible. Please either re-insert the SD card or un-mount the SD card as a disk drive.</string>
	<string name="pref_bluetooth_screen">pref_bluetooth_screen</string>
	<string name="pref_bluetooth_screen_title">Bluetooth Settings</string>
	<string name="pref_bluetooth_screen_summary">Specifies settings for headsets and bluetooth devices.</string>
	<string name="pref_bluetooth_device_category_title">Device Settings</string>
	<string name="pref_bluetooth_defaults_category_title">Default Settings</string>
	<string name="pref_bluetooth_defaults">pref_bluetooth_defaults</string>
	<string name="pref_bluetooth_defaults_title">Use Bluetooth Defaults</string>
	<string name="pref_bluetooth_defaults_summary">Determines whether or not the default bluetooth device settings should be used.</string>
	<string name="pref_bluetooth_connected">pref_bluetooth_connected</string>
	<string name="pref_bluetooth_connected_title">Bluetooth Connected</string>
	<string name="pref_headphones_screen">pref_headphones_screen</string>
	<string name="pref_headphones_screen_title">Headphones Settings</string>
	<string name="pref_headphones_screen_summary">Specifies settings for headphones and auxiliary devices.</string>
	<string name="pref_headphones_connected">pref_headphones_connected</string>
	<string name="pref_headphones_connected_title">Headphones Connected</string>
	<string name="pref_headphones_connected_summary">Determines the action that will occur when headphones and auxiliary devices are connected to the 3.5mm jack.</string>
	<string name="pref_headphones_disconnected">pref_headphones_disconnected</string>
	<string name="pref_headphones_disconnected_title">Headphones Disconnected</string>
	<string name="pref_headphones_disconnected_summary">Determines the action that will occur when headphones and auxiliary devices are disconnected from the 3.5mm jack.</string>
	<string name="pref_playback_screen">pref_playback_screen</string>
	<string name="pref_playback_screen_title">Playback Settings</string>
	<string name="pref_playback_screen_summary">Specifies settings for the media should be played.</string>
	<string name="pref_repeat_status">pref_repeat_status</string>
	<string name="pref_repeat_status_title">Repeat Status</string>
	<string name="pref_repeat_status_summary">Specifies the status of the repeat action, whether it be repeating the playlist, the song, or no repeat.</string>
	<string name="pref_play_mode">pref_play_mode</string>
	<string name="pref_play_mode_title">Play Mode</string>
	<string name="pref_play_mode_summary">Specifies how to play media in the playlist. Persisted shuffle is guaranteed to NEVER repeat a song until all songs have been played.</string>
	<string name="pref_clear_queue_with_play_mode">pref_clear_queue_with_play_mode</string>
	<string name="pref_clear_queue_with_play_mode_title">Play Mode Clears Queue</string>
	<string name="pref_clear_queue_with_play_mode_summary">Determines whether or not the queue of upcoming songs in the playlist should be cleared when the play mode option changes.</string>
	<string name="pref_previous_action">pref_previous_action</string>
	<string name="pref_previous_action_title">Previous Button Action</string>
	<string name="pref_previous_action_summary">The \'Smart\' option will restart the current song or play the previous song depending on how much of the song has played.</string>
	<string name="pref_previous_smart_condition">pref_previous_smart_condition</string>
	<string name="pref_previous_smart_condition_title">Previous Smart Condition</string>
	<string name="pref_previous_smart_condition_summary">Specifies the condition of how much the current song must have played before the previous button will instead restart the song.</string>
	<string name="pref_notification_screen">pref_notification_screen</string>
	<string name="pref_notification_screen_title">Notification Settings</string>
	<string name="pref_notification_screen_summary">Specifies settings for displaying notifications.</string>
	<string name="pref_light_up_screen">pref_light_up_screen</string>
	<string name="pref_light_up_screen_title">Light Up Screen</string>
	<string name="pref_light_up_screen_summary">Determines whether or not the screen should light up when a song changes, only if the screen is not already lit up.</string>
	<string name="pref_notification_visibility">pref_notification_visibility</string>
	<string name="pref_notification_visibility_title">Notification Visibility</string>
	<string name="pref_notification_visibility_summary">Determines when the notification icon should be displayed.</string>
	<string name="pref_open_overlay_player">pref_open_overlay_player</string>
	<string name="pref_open_overlay_player_title">Open Overlay Player</string>
	<string name="pref_open_overlay_player_summary">Determines whether or not a mini-player will overlay the current application when the notification icon is clicked.</string>
	<string name="pref_scrobble_screen">pref_scrobble_screen</string>
	<string name="pref_scrobble_screen_title">Scrobble Settings</string>
	<string name="pref_scrobble_screen_summary">Specifies settings for publishing music activity to your Scrobble account.</string>
	<string name="pref_scrobble_login">pref_scrobble_login</string>
	<string name="pref_scrobble_login_title">Login</string>
	<string name="pref_scrobble_login_summary">Log into your Scrobble account. Your username and password will not be stored.</string>
	<string name="pref_scrobble_logout">pref_scrobble_logout</string>
	<string name="pref_scrobble_logout_title">Logout</string>
	<string name="pref_scrobble_logout_summary">Log out of your Scrobble account.</string>
	<string name="pref_scrobble_on">pref_scrobble_on</string>
	<string name="pref_scrobble_on_title">Scrobble</string>
	<string name="pref_scrobble_on_summary">Determines whether or not your music activity will be published to your Scrobble account. Turning this off does not log you out.</string>
	<string name="pref_volume_screen">pref_volume_screen</string>
	<string name="pref_volume_screen_title">Volume Settings</string>
	<string name="pref_volume_screen_summary">Specifies settings for controlling the volume.</string>
	<string name="pref_volume_speaker">pref_volume_speaker</string>
	<string name="pref_volume_speaker_title">Speaker Volume</string>
	<string name="pref_volume_speaker_summary">Specifies what the media volume will be set to if headphones and headsets are disconnected. Disabled does not update the volume.</string>
	<string name="pref_volume_headphones">pref_volume_headphones</string>
	<string name="pref_volume_headphones_title">Headphone Volume</string>
	<string name="pref_volume_headphones_summary">Specifies what the media volume will be set to if headphones and auxiliary devices are connected. Disabled does not update the volume.</string>
	<string name="pref_volume_bluetooth">pref_volume_bluetooth</string>
	<string name="pref_volume_bluetooth_title">Bluetooth Volume</string>
	<string name="pref_volume_bluetooth_summary">Specifies what the media volume will be set to if headsets and bluetooth devices are connected. Disabled does not update the volume.</string>
	<string name="pref_advanced_screen">pref_advanced_screen</string>
	<string name="pref_advanced_screen_title">Advanced Settings</string>
	<string name="pref_advanced_screen_summary">Specifies settings for advanced features.</string>
	<string name="pref_record_logs">pref_record_logs</string>
	<string name="pref_record_logs_title">Record Logs</string>
	<string name="pref_record_logs_summary">Determines whether or not error logs are automatically recorded. It is STRONGLY recommended that this remains enabled.</string>
	<string name="pref_resume_automatically">pref_resume_automatically</string>
	<string name="pref_resume_automatically_title">Resume Automatically</string>
	<string name="pref_resume_automatically_summary">Determines whether or not playback will resume after it was automatically paused for an event (phone calls, SD card mounting, etc.).</string>
</resources>