<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:custom="http://schemas.android.com/apk/res/dev.paddock.adp.mCubed">
	<PreferenceScreen android:title="@string/pref_playback_screen_title"
		android:summary="@string/pref_playback_screen_summary"
		android:key="@string/pref_playback_screen">
		<ListPreference android:title="@string/pref_repeat_status_title"
			android:summary="@string/pref_repeat_status_summary"
			android:key="@string/pref_repeat_status" />
		<ListPreference android:title="@string/pref_play_mode_title"
			android:summary="@string/pref_play_mode_summary"
			android:key="@string/pref_play_mode" />
		<CheckBoxPreference android:title="@string/pref_clear_queue_with_play_mode_title"
			android:summary="@string/pref_clear_queue_with_play_mode_summary"
			android:key="@string/pref_clear_queue_with_play_mode" />
		<ListPreference android:title="@string/pref_previous_action_title"
			android:summary="@string/pref_previous_action_summary"
			android:key="@string/pref_previous_action" />
		<dev.paddock.adp.mCubed.preferences.DimensionPreference android:title="@string/pref_previous_smart_condition_title"
			android:summary="@string/pref_previous_smart_condition_summary"
			android:key="@string/pref_previous_smart_condition"
			custom:dimensions="%,%,0,100;s,Seconds,0,999" />
	</PreferenceScreen>
	<PreferenceScreen android:title="@string/pref_bluetooth_screen_title"
		android:summary="@string/pref_bluetooth_screen_summary"
		android:key="@string/pref_bluetooth_screen" />
	<PreferenceScreen android:title="@string/pref_headphones_screen_title"
		android:summary="@string/pref_headphones_screen_summary"
		android:key="@string/pref_headphones_screen">
		<ListPreference android:title="@string/pref_headphones_connected_title"
			android:summary="@string/pref_headphones_connected_summary"
			android:key="@string/pref_headphones_connected" />
		<ListPreference android:title="@string/pref_headphones_disconnected_title"
			android:summary="@string/pref_headphones_disconnected_summary"
			android:key="@string/pref_headphones_disconnected" />
	</PreferenceScreen>
	<PreferenceScreen android:title="@string/pref_notification_screen_title"
		android:summary="@string/pref_notification_screen_summary"
		android:key="@string/pref_notification_screen">
		<CheckBoxPreference android:title="@string/pref_light_up_screen_title"
			android:summary="@string/pref_light_up_screen_summary"
			android:key="@string/pref_light_up_screen" />
		<ListPreference android:title="@string/pref_notification_visibility_title"
			android:summary="@string/pref_notification_visibility_summary"
			android:key="@string/pref_notification_visibility" />
		<CheckBoxPreference android:title="@string/pref_open_overlay_player_title"
			android:summary="@string/pref_open_overlay_player_summary"
			android:key="@string/pref_open_overlay_player" />
	</PreferenceScreen>
	<PreferenceScreen android:title="@string/pref_scrobble_screen_title"
		android:summary="@string/pref_scrobble_screen_summary"
		android:key="@string/pref_scrobble_screen">
		<CheckBoxPreference android:title="@string/pref_scrobble_on_title"
			android:summary="@string/pref_scrobble_on_summary"
			android:key="@string/pref_scrobble_on" />
		<dev.paddock.adp.mCubed.preferences.LoginPreference android:title="@string/pref_scrobble_login_title"
			android:summary="@string/pref_scrobble_login_summary"
			android:key="@string/pref_scrobble_login"
			android:dependency="@string/pref_scrobble_on" />
		<Preference android:title="@string/pref_scrobble_logout_title"
			android:summary="@string/pref_scrobble_logout_summary"
			android:key="@string/pref_scrobble_logout" />
	</PreferenceScreen>
	<PreferenceScreen android:title="@string/pref_volume_screen_title"
		android:summary="@string/pref_volume_screen_summary"
		android:key="@string/pref_volume_screen">
		<dev.paddock.adp.mCubed.preferences.SeekBarPreference android:title="@string/pref_volume_speaker_title"
			android:summary="@string/pref_volume_speaker_summary"
			android:key="@string/pref_volume_speaker"
			custom:units="%" />
		<dev.paddock.adp.mCubed.preferences.SeekBarPreference android:title="@string/pref_volume_headphones_title"
			android:summary="@string/pref_volume_headphones_summary"
			android:key="@string/pref_volume_headphones"
			custom:units="%" />
		<dev.paddock.adp.mCubed.preferences.SeekBarPreference android:title="@string/pref_volume_bluetooth_title"
			android:summary="@string/pref_volume_bluetooth_summary"
			android:key="@string/pref_volume_bluetooth"
			custom:units="%" />
	</PreferenceScreen>
	<PreferenceScreen android:title="@string/pref_advanced_screen_title"
		android:summary="@string/pref_advanced_screen_summary"
		android:key="@string/pref_advanced_screen">
		<CheckBoxPreference android:title="@string/pref_record_logs_title"
			android:summary="@string/pref_record_logs_summary"
			android:key="@string/pref_record_logs" />
		<CheckBoxPreference android:title="@string/pref_resume_automatically_title"
			android:summary="@string/pref_resume_automatically_summary"
			android:key="@string/pref_resume_automatically" />
	</PreferenceScreen>
</PreferenceScreen>